--- a/Assignments/HW3/STAT-7220-HW3.ipynb
+++ b/Assignments/HW3/STAT-7220-HW3.ipynb
@@ -54,7 +54,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "57whE8UJFULN",
         "outputId": "35ecc679-e8bc-4dc6-d627-be44611decd9"
@@ -298,7 +299,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 1565
         },
         "id": "xn5xU-cUHjrq",
         "outputId": "c5762ef3-9667-42a1-e559-ba33bee12792"
@@ -365,7 +366,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 1455
         },
         "id": "a9616d48",
         "outputId": "ce002a2f-05a4-4196-c382-ddedf11068c9"
@@ -559,7 +560,8 @@
       "id": "065a0515",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "065a0515",
         "outputId": "c36a276e-39dc-4782-c7d8-9cca3a74ba92"
@@ -622,7 +624,8 @@
       "id": "b6c23734",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "b6c23734",
         "outputId": "596e51ee-994c-41a3-b199-dc70e374330f"
@@ -972,7 +975,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 1715
         },
         "id": "S4In0l0hlJNG",
         "outputId": "bf33ac84-e7c8-4478-fdae-82cad1908f80"
@@ -1215,7 +1218,8 @@
       "id": "69bfa7ed",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "69bfa7ed",
         "outputId": "74165903-7b18-4c48-fd57-ba7e3d3a3ca4"
@@ -1295,7 +1299,8 @@
       "id": "5f753645",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "5f753645",
         "outputId": "90a2c753-d936-4de0-a822-280e585572a2"
@@ -1357,7 +1362,8 @@
       "id": "7d8941c3",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "7d8941c3",
         "outputId": "01496a31-68c2-4a1c-da63-74072b6b9116"
