--- a/Assignments/Final-Exam/Final-Exam.ipynb
+++ b/Assignments/Final-Exam/Final-Exam.ipynb
@@ -39,8 +39,19 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**The objective of the experiment is to determine how the choice of protein, salsa, and the presence of potatoes influence customer's satisfaction with Buster's Breakfast Burritos, so that you can identify the best ingredient combination.**"
+      ],
+      "metadata": {
+        "id": "JD3EGoP8cp0v"
+      },
+      "id": "JD3EGoP8cp0v"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "2. State the outcome variable and how it was measured.\n",
-        "\n"
+        "\n",
+        "**The outcome variable is customer satisfaction, measured as a (1–10) rating given by each participant after tasting their assigned burrito.**"
       ],
       "metadata": {
         "id": "Oh3fJtHIaw2z"
@@ -51,7 +62,8 @@
       "cell_type": "markdown",
       "source": [
         "3. State the main effects. What lurking variables may be present?\n",
-        "\n"
+        "\n",
+        "**Main effects:Protein (Bacon, Sausage, Chorizo),Salsa (Mild, Hot) and Potatoes (Yes, No).Possible lurking variables can be Individual taste preferences, hunger level, time of day, spice tolerance, prior experiences with similar foods, and environmental factors such as temperature or presentation.**"
       ],
       "metadata": {
         "id": "XV-VnfcLa6LJ"
@@ -63,8 +75,40 @@
       "source": [
         "4. Why might a full factorial design be preferred here to a $2^k$ fractional factorial design?\n",
         "\n",
+        "**A full factorial design is preferred because all factors have more than two levels (Protein has 3 levels) and the goal is to understand every main effect and interaction without confounding.**\n",
+        "\n",
         "5. State all sets of statistical hypotheses.\n",
-        "\n"
+        "\n",
+        "Main effects hypotheses:\n",
+        "Protein: H0: All protein types have the same mean satisfaction.\n",
+        " H1: At least one differs.\n",
+        "Salsa: H0: Mild and Hot have the same mean satisfaction.\n",
+        " H1: They differ.\n",
+        "Potatoes: H0: Potatoes (Yes/No) have the same mean satisfaction.\n",
+        " H1: They differ.\n",
+        "\n",
+        "Interaction hypotheses:\n",
+        "H0: No interaction between factors.\n",
+        "H1: At least one interaction exists.\n",
+        "\n",
+        "Two-Way Interactions\n",
+        "\n",
+        "Protein x Salsa:\n",
+        "H0: No interaction between protein and salsa.\n",
+        "H1: Interaction exists.\n",
+        "\n",
+        "Protein x Potatoes:\n",
+        "H0: No interaction between protein and potatoes.\n",
+        "H1: Interaction exists.\n",
+        "\n",
+        "Salsa x Potatoes:\n",
+        "H0: No interaction between salsa and potatoes.\n",
+        "H1: Interaction exists.\n",
+        "\n",
+        "Three-Way Interaction\n",
+        "Protein x Salsa x Potatoes:\n",
+        "H0: No three-way interaction among the three factors.\n",
+        "H1: A three-way interaction exists."
       ],
       "metadata": {
         "id": "iD0eluRKa_SM"
