--- a/Assignments/Final-Exam/Final-Exam.ipynb
+++ b/Assignments/Final-Exam/Final-Exam.ipynb
@@ -886,12 +886,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "id": "28110e89",
       "metadata": {
-        "id": "28110e89"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "28110e89",
+        "outputId": "a86d06b5-49a7-4f44-dbbb-7e067cd50a9f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " Multiple Comparison of Means - Tukey HSD, FWER=0.05  \n",
+            "======================================================\n",
+            " group1  group2 meandiff p-adj   lower   upper  reject\n",
+            "------------------------------------------------------\n",
+            "  Bacon Chorizo     0.25 0.7419 -0.5649  1.0649  False\n",
+            "  Bacon Sausage    -0.67 0.1268 -1.4849  0.1449  False\n",
+            "Chorizo Sausage    -0.92 0.0233 -1.7349 -0.1051   True\n",
+            "------------------------------------------------------\n"
+          ]
+        }
+      ],
       "source": [
         "## Question 10 Code ##\n",
         "import statsmodels.stats.multicomp as mc\n",
@@ -899,6 +918,16 @@
         "tukey = mc.pairwise_tukeyhsd(df[\"Satisfaction\"], df[\"Protein\"])\n",
         "print(tukey)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The interaction effects were not statistically significant, so no post-hoc tests were needed for any interaction terms. For the main effects, Protein and Salsa were significant. Salsa has only two levels, so no additional comparisons are required. Protein has three levels, so a Tukey HSD post-hoc test was used. The results show that Chorizo is rated significantly higher than Sausage, while Bacon does not differ significantly from either one. No post-hoc test was conducted for Potatoes because its main effect was not statistically significant."
+      ],
+      "metadata": {
+        "id": "yO3W1sCx_KLu"
+      },
+      "id": "yO3W1sCx_KLu"
     },
     {
       "cell_type": "markdown",
@@ -912,15 +941,117 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
       "id": "f0ae42ca",
       "metadata": {
-        "id": "f0ae42ca"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 304
+        },
+        "id": "f0ae42ca",
+        "outputId": "f26a5862-c222-47b5-cd03-9beb334a828b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "C(Protein)                         0.142938\n",
+              "C(Salsa)                           0.078015\n",
+              "C(Potatoes)                        0.059863\n",
+              "C(Protein):C(Salsa)                0.007485\n",
+              "C(Protein):C(Potatoes)             0.030509\n",
+              "C(Salsa):C(Potatoes)               0.012421\n",
+              "C(Protein):C(Salsa):C(Potatoes)    0.004281\n",
+              "Name: sum_sq, dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>sum_sq</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>C(Protein)</th>\n",
+              "      <td>0.142938</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>C(Salsa)</th>\n",
+              "      <td>0.078015</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>C(Potatoes)</th>\n",
+              "      <td>0.059863</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>C(Protein):C(Salsa)</th>\n",
+              "      <td>0.007485</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>C(Protein):C(Potatoes)</th>\n",
+              "      <td>0.030509</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>C(Salsa):C(Potatoes)</th>\n",
+              "      <td>0.012421</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>C(Protein):C(Salsa):C(Potatoes)</th>\n",
+              "      <td>0.004281</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ],
       "source": [
-        "## Question 11 Code ##"
+        "## Question 11 Code ##\n",
+        "# ANOVA table from your full model\n",
+        "\n",
+        "anova_table = sm.stats.anova_lm(full_model, typ=2)\n",
+        "\n",
+        "\n",
+        "## Extract SS for error (residuals) ##\n",
+        "ss_error = anova_table.loc[\"Residual\", \"sum_sq\"]\n",
+        "\n",
+        "\n",
+        "# Compute partial eta-squared for each main effect\n",
+        "partial_eta_sq = anova_table.iloc[:-1][\"sum_sq\"] / (anova_table.iloc[:-1][\"sum_sq\"] + ss_error)\n",
+        "\n",
+        "# Print results\n",
+        "partial_eta_sq\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The main contributors to variation in satisfaction are Protein (moderate effect) and, to a lesser extent, Salsa (small–moderate effect). Potatoes have only a small influence, and all interaction effects are negligible. This supports the conclusion that ingredient effects operate mostly independently and that Protein is the most impactful factor in the study."
+      ],
+      "metadata": {
+        "id": "Swfrpwa6CZxj"
+      },
+      "id": "Swfrpwa6CZxj"
     },
     {
       "cell_type": "markdown",
@@ -931,6 +1062,28 @@
       "source": [
         "12. Give an overall conclusion for the experiment. Which burrito combination(s) should you include on your menu regularly? What are the limitations of your experiment? How could you improve it in the future?"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The experiment shows that Protein and Salsa choices matter most for customer satisfaction. Chorizo consistently receives the highest ratings, followed by Bacon, while Sausage is rated noticeably lower. Mild salsa is preferred over hot salsa, and potatoes have only a small effect on satisfaction.\n",
+        "\n",
+        "Recommended Menu Items\n",
+        "Based on the results, you should regularly offer:\n",
+        "Chorizo + Mild Salsa burritos (highest-rated combination)\n",
+        "Bacon + Mild Salsa as a strong second option\n",
+        "Potatoes can be included as an optional add-on, and sausage burritos should be limited or improved since they scored the lowest.\n",
+        "\n",
+        "Limitations\n",
+        "The study used a small sample size, each person tried only one burrito, and the results may not generalize beyond the local group tested. Taste differences between participants also introduce variability.\n",
+        "\n",
+        "Future Improvements\n",
+        "Future studies could use a larger and more diverse sample, have participants taste multiple burritos, use blind tasting to reduce bias, and include additional ingredients or recipe variations to better understand preferences."
+      ],
+      "metadata": {
+        "id": "-_sPzytIDp31"
+      },
+      "id": "-_sPzytIDp31"
     },
     {
       "cell_type": "markdown",
