--- a/Assignments/Final-Exam/Final-Exam.ipynb
+++ b/Assignments/Final-Exam/Final-Exam.ipynb
@@ -68,7 +68,7 @@
         "outputId": "93a1fc48-969c-4af3-a3f4-ca9b35f2a98b"
       },
       "id": "eGKujMKIl5nH",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,7 +304,7 @@
         "outputId": "92a6af7c-a8a4-4a37-b258-c6af0c7db27e"
       },
       "id": "pfWSXEh6lIEG",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -530,7 +530,7 @@
         "outputId": "be23e348-baa3-4f70-9055-f9d298a9ba6e"
       },
       "id": "WIt4NUI3qZKW",
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -581,7 +581,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "ae1730ca",
       "metadata": {
         "colab": {
@@ -720,7 +720,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "id": "3ffab80f",
       "metadata": {
         "colab": {
@@ -829,7 +829,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "id": "ce05a99d",
       "metadata": {
         "colab": {
@@ -886,7 +886,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "id": "28110e89",
       "metadata": {
         "colab": {
@@ -941,7 +941,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "id": "f0ae42ca",
       "metadata": {
         "colab": {
@@ -1105,17 +1105,134 @@
         "To be more efficient with time and resources, you decide to conduct a $2^{3-1}$ fractional factorial design where your ultimate outcome is the sales amount (in dollars) for the day you set up. For each of the above runs, you will set up your truck $r=2$ times and record the sales amount. The data are stored in the `Busters Burrito Sales.xlsx` file in our course repo. With these day, I want you to:\n",
         "\n",
         "1. Briefly describe the objective of the experiment.\n",
-        "\n",
-        "2. Specify the outcome variable and how it is measured.\n",
-        "\n",
-        "3. Specify the independent variables. What lurking variables may be present?\n",
-        "\n",
-        "4. Explain why a fractional design is appropriate here. What are the advantages and disadvantages of using a fractional design?\n",
-        "\n",
-        "5. State the sets of null and alternative hypotheses for this experiment.\n",
-        "\n",
-        "6. Perform appropriate exploratory/descriptive analysis including summary statistics and appropriate visualizations. Do these analyses provide any support for the hypotheses? Briefly explain."
+        "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**The objective of the experiment is to determine how location, timing, and marketing strategy influence daily sales for Buster's Breakfast Burritos, using a fractional factorial design to identify the most impactful factors efficiently.**"
+      ],
+      "metadata": {
+        "id": "GlDE8t1hglWd"
+      },
+      "id": "GlDE8t1hglWd"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2. Specify the outcome variable and how it is measured.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "YIzH78ONgrmS"
+      },
+      "id": "YIzH78ONgrmS"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Outcome Variable: Daily sales amount and Total dollars earned from burrito sales each day."
+      ],
+      "metadata": {
+        "id": "LwUoozQKgufy"
+      },
+      "id": "LwUoozQKgufy"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. Specify the independent variables. What lurking variables may be present?\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "uHLPkHGAguQs"
+      },
+      "id": "uHLPkHGAguQs"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Independent variables: Location: Brewery vs. University ,Timing: Weekday vs. Weekend and Marketing: Independent vs. Partnered with brewery/university.\n",
+        "\n",
+        "Possible lurking variables (not controlled but could affect sales):Weather, special events or holidays, nearby competition, traffic/foot traffic, and staff efficiency."
+      ],
+      "metadata": {
+        "id": "s3gN1NjEiBSk"
+      },
+      "id": "s3gN1NjEiBSk"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4. Explain why a fractional design is appropriate here. What are the advantages and disadvantages of using a fractional design?\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "9W7YWmGCg0uX"
+      },
+      "id": "9W7YWmGCg0uX"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A fractional factorial design is appropriate because it allows you to study the effects of location, timing, and marketing on sales without running every possible combination, making the experiment far more efficient in terms of time, cost, and labor. The main advantage is that you can gather meaningful information about the most important factors while using fewer runs. However, the trade-off is that some interactions become confounded, meaning you cannot fully separate which factor caused what effect. As a result, fractional designs provide less detail than full factorial designs and may miss certain interaction effects if they are present."
+      ],
+      "metadata": {
+        "id": "0zHLTvUOi1yY"
+      },
+      "id": "0zHLTvUOi1yY"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "5. State the sets of null and alternative hypotheses for this experiment.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ScvdsjPTg3iv"
+      },
+      "id": "ScvdsjPTg3iv"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Hypotheses for Main Effects include **Location** (A)\n",
+        "H0: Location has no effect on sales.\n",
+        "H1: Location has an effect on sales.\n",
+        "**Timing** (B)\n",
+        "H0: Timing has no effect on sales.\n",
+        "H1: Timing has an effect on sales.\n",
+        "**Marketing** (C)\n",
+        "H0: Marketing has no effect on sales.\n",
+        "H1: Marketing has an effect on sales.\n",
+        "\n",
+        "\n",
+        "**Hypotheses for Two-Factor Interactions**\n",
+        "**A x B**\n",
+        "H0: Location x Timing interaction has no effect on sales.\n",
+        "H1: Location x Timing interaction has an effect on sales.\n",
+        "**A x C**\n",
+        "H0: Location x Marketing interaction has no effect on sales.\n",
+        "H1: Location x Marketing interaction has an effect on sales.\n",
+        "**B x C**\n",
+        "H0: Timing x Marketing interaction has no effect on sales.\n",
+        "H1: Timing x Marketing interaction has an effect on sales."
+      ],
+      "metadata": {
+        "id": "CPPBJhCQjh6G"
+      },
+      "id": "CPPBJhCQjh6G"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "6. Perform appropriate exploratory/descriptive analysis including summary statistics and appropriate visualizations. Do these analyses provide any support for the hypotheses? Briefly explain."
+      ],
+      "metadata": {
+        "id": "LEW7y__7g6RY"
+      },
+      "id": "LEW7y__7g6RY"
     },
     {
       "cell_type": "code",
@@ -1126,7 +1243,182 @@
       },
       "outputs": [],
       "source": [
-        "## Question 6 Code ##"
+        "## Question 6 Code ##\n",
+        "\n",
+        "import os\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import statsmodels.api as sm\n",
+        "from statsmodels.formula.api import ols\n",
+        "from statsmodels.stats.anova import anova_lm\n",
+        "from plotnine import *\n",
+        "\n",
+        "# ---------------------------------------------------------\n",
+        "# 1. Load data\n",
+        "# ---------------------------------------------------------\n",
+        "\n",
+        "# If needed, set your working directory, e.g.:\n",
+        "# os.chdir(\"d:/KSU/Your/Path/Here\")\n",
+        "\n",
+        "data_path = \"Busters Burrito Sales.xlsx\"  # adjust if needed\n",
+        "burritos = pd.read_excel(data_path)\n",
+        "\n",
+        "print(\"First few rows of data:\")\n",
+        "print(burritos.head())\n",
+        "print(\"\\nData info:\")\n",
+        "print(burritos.info())\n",
+        "\n",
+        "# Ensure categorical variables are treated as categories\n",
+        "factor_cols = [\"Location\", \"Timing\", \"Marketing\"]\n",
+        "for col in factor_cols:\n",
+        "    burritos[col] = burritos[col].astype(\"category\")\n",
+        "\n",
+        "# ---------------------------------------------------------\n",
+        "# 2. Summary statistics: main effects\n",
+        "# ---------------------------------------------------------\n",
+        "\n",
+        "print(\"\\n=== Summary Statistics for Main Effects ===\")\n",
+        "\n",
+        "loc_summary = (\n",
+        "    burritos\n",
+        "    .groupby(\"Location\")[\"Sales\"]\n",
+        "    .agg([\"mean\", \"std\", \"count\"])\n",
+        "    .rename(columns={\"mean\": \"mean_sales\", \"std\": \"sd_sales\", \"count\": \"n\"})\n",
+        ")\n",
+        "print(\"\\nLocation:\")\n",
+        "print(loc_summary)\n",
+        "\n",
+        "time_summary = (\n",
+        "    burritos\n",
+        "    .groupby(\"Timing\")[\"Sales\"]\n",
+        "    .agg([\"mean\", \"std\", \"count\"])\n",
+        "    .rename(columns={\"mean\": \"mean_sales\", \"std\": \"sd_sales\", \"count\": \"n\"})\n",
+        ")\n",
+        "print(\"\\nTiming:\")\n",
+        "print(time_summary)\n",
+        "\n",
+        "mkt_summary = (\n",
+        "    burritos\n",
+        "    .groupby(\"Marketing\")[\"Sales\"]\n",
+        "    .agg([\"mean\", \"std\", \"count\"])\n",
+        "    .rename(columns={\"mean\": \"mean_sales\", \"std\": \"sd_sales\", \"count\": \"n\"})\n",
+        ")\n",
+        "print(\"\\nMarketing:\")\n",
+        "print(mkt_summary)\n",
+        "\n",
+        "# ---------------------------------------------------------\n",
+        "# 3. Summary statistics: two-way interactions\n",
+        "# ---------------------------------------------------------\n",
+        "\n",
+        "print(\"\\n=== Summary Statistics for Two-Way Interactions ===\")\n",
+        "\n",
+        "loc_time_summary = (\n",
+        "    burritos\n",
+        "    .groupby([\"Location\", \"Timing\"])[\"Sales\"]\n",
+        "    .agg([\"mean\", \"std\", \"count\"])\n",
+        "    .rename(columns={\"mean\": \"mean_sales\", \"std\": \"sd_sales\", \"count\": \"n\"})\n",
+        ")\n",
+        "print(\"\\nLocation × Timing:\")\n",
+        "print(loc_time_summary)\n",
+        "\n",
+        "loc_mkt_summary = (\n",
+        "    burritos\n",
+        "    .groupby([\"Location\", \"Marketing\"])[\"Sales\"]\n",
+        "    .agg([\"mean\", \"std\", \"count\"])\n",
+        "    .rename(columns={\"mean\": \"mean_sales\", \"std\": \"sd_sales\", \"count\": \"n\"})\n",
+        ")\n",
+        "print(\"\\nLocation × Marketing:\")\n",
+        "print(loc_mkt_summary)\n",
+        "\n",
+        "time_mkt_summary = (\n",
+        "    burritos\n",
+        "    .groupby([\"Timing\", \"Marketing\"])[\"Sales\"]\n",
+        "    .agg([\"mean\", \"std\", \"count\"])\n",
+        "    .rename(columns={\"mean\": \"mean_sales\", \"std\": \"sd_sales\", \"count\": \"n\"})\n",
+        ")\n",
+        "print(\"\\nTiming × Marketing:\")\n",
+        "print(time_mkt_summary)\n",
+        "\n",
+        "# ---------------------------------------------------------\n",
+        "# 4. Summary statistics: three-way cell means\n",
+        "# ---------------------------------------------------------\n",
+        "\n",
+        "print(\"\\n=== Three-Way Cell Means: Location × Timing × Marketing ===\")\n",
+        "\n",
+        "burrito_means = (\n",
+        "    burritos\n",
+        "    .groupby([\"Location\", \"Timing\", \"Marketing\"])[\"Sales\"]\n",
+        "    .agg([\"mean\", \"std\", \"count\"])\n",
+        "    .reset_index()\n",
+        "    .rename(columns={\"mean\": \"mean_sales\", \"std\": \"sd_sales\", \"count\": \"n\"})\n",
+        ")\n",
+        "print(burrito_means)\n",
+        "\n",
+        "# ---------------------------------------------------------\n",
+        "# 5. ANOVA and partial eta-squared\n",
+        "# ---------------------------------------------------------\n",
+        "\n",
+        "print(\"\\n=== ANOVA: Sales ~ Location * Timing * Marketing ===\")\n",
+        "\n",
+        "model = ols(\"Sales ~ Location * Timing * Marketing\", data=burritos).fit()\n",
+        "anova_table = anova_lm(model, typ=2)  # Type II ANOVA (good for balanced designs)\n",
+        "\n",
+        "print(\"\\nANOVA Table:\")\n",
+        "print(anova_table)\n",
+        "\n",
+        "# Compute partial eta-squared for each effect\n",
+        "ss_resid = anova_table.loc[\"Residual\", \"sum_sq\"]\n",
+        "anova_pe = anova_table.copy()\n",
+        "anova_pe[\"partial_eta2\"] = anova_pe[\"sum_sq\"] / (anova_pe[\"sum_sq\"] + ss_resid)\n",
+        "\n",
+        "# Residual row partial eta² is not meaningful; set to NaN\n",
+        "anova_pe.loc[\"Residual\", \"partial_eta2\"] = np.nan\n",
+        "\n",
+        "print(\"\\nANOVA Table with Partial Eta-Squared:\")\n",
+        "print(anova_pe)\n",
+        "\n",
+        "# ---------------------------------------------------------\n",
+        "# 6. Interaction-style plot (boxplots + means + lines + facet)\n",
+        "# ---------------------------------------------------------\n",
+        "\n",
+        "# We already have burrito_means with mean_sales\n",
+        "# Plot: x = Timing, fill/color = Location, facet = Marketing, y = Sales\n",
+        "\n",
+        "box_dodge = position_dodge(0.75)\n",
+        "\n",
+        "p = (\n",
+        "    ggplot(burritos, aes(x=\"Timing\", y=\"Sales\"))\n",
+        "    + geom_boxplot(aes(fill=\"Location\"), alpha=0.7, position=box_dodge)\n",
+        "    + geom_point(\n",
+        "        data=burrito_means,\n",
+        "        mapping=aes(x=\"Timing\", y=\"mean_sales\", group=\"Location\"),\n",
+        "        position=box_dodge,\n",
+        "        shape=\"x\",\n",
+        "        size=3,\n",
+        "        color=\"black\"\n",
+        "    )\n",
+        "    + geom_line(\n",
+        "        data=burrito_means,\n",
+        "        mapping=aes(x=\"Timing\", y=\"mean_sales\", group=\"Location\", color=\"Location\"),\n",
+        "        position=box_dodge,\n",
+        "        size=1.1\n",
+        "    )\n",
+        "    + facet_wrap(\"~Marketing\")\n",
+        "    + labs(\n",
+        "        title=\"Daily Sales by Timing, Location, and Marketing\",\n",
+        "        x=\"Timing\",\n",
+        "        y=\"Sales (dollars)\"\n",
+        "    )\n",
+        "    + theme_bw()\n",
+        ")\n",
+        "\n",
+        "print(\"\\nRendering interaction plot...\")\n",
+        "print(p)\n",
+        "\n",
+        "# If you want to save the plot as a file:\n",
+        "# p.save(\"busters_burrito_interaction_plot.png\", dpi=300)\n"
       ]
     },
     {
