--- a/Assignments/Final-Exam/Final-Exam.ipynb
+++ b/Assignments/Final-Exam/Final-Exam.ipynb
@@ -1238,11 +1238,11 @@
       "id": "9df0e7e3",
       "metadata": {
         "id": "9df0e7e3",
-        "outputId": "c3720ae8-fe58-4db0-fc71-54c29aa42de3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "c3720ae8-fe58-4db0-fc71-54c29aa42de3"
       },
       "outputs": [
         {
@@ -1580,11 +1580,11 @@
       "id": "fe2385ca",
       "metadata": {
         "id": "fe2385ca",
-        "outputId": "7459119e-64a7-4ab3-8645-0d5967c7ec50",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "7459119e-64a7-4ab3-8645-0d5967c7ec50"
       },
       "outputs": [
         {
@@ -1688,11 +1688,11 @@
       "id": "d20e8e79",
       "metadata": {
         "id": "d20e8e79",
-        "outputId": "181b0c25-5b4d-4bf6-c795-6ded90f385f6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 740
-        }
+        },
+        "outputId": "181b0c25-5b4d-4bf6-c795-6ded90f385f6"
       },
       "outputs": [
         {
@@ -1806,10 +1806,10 @@
       "id": "c44ee60b",
       "metadata": {
         "id": "c44ee60b",
-        "outputId": "1f6af9dd-11a2-4515-9845-32fc7c9f87fb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1f6af9dd-11a2-4515-9845-32fc7c9f87fb"
       },
       "outputs": [
         {
@@ -1859,10 +1859,10 @@
       "id": "917d5a51",
       "metadata": {
         "id": "917d5a51",
-        "outputId": "f058c1c7-e769-40ee-ec44-915c8d942625",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f058c1c7-e769-40ee-ec44-915c8d942625"
       },
       "outputs": [
         {
@@ -1924,10 +1924,10 @@
       "id": "c728f571",
       "metadata": {
         "id": "c728f571",
-        "outputId": "8147e0bf-c003-4e30-be4c-5f803a28d96f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8147e0bf-c003-4e30-be4c-5f803a28d96f"
       },
       "outputs": [
         {
@@ -1985,12 +1985,34 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "13. Give an overall conclusion for the experiment. Which location, timing, and marketing combination(s) should you use to maximize sales? What are the limitations of your experiment? How could you improve it in the future?"
+      ],
+      "metadata": {
+        "id": "B_liqE5XFErn"
+      },
+      "id": "B_liqE5XFErn"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Overall, the experiment shows that when and how you operate the truck matters more than where you place it. Weekend operations produce the highest sales, and partnership marketing leads to much stronger results than independent marketing. The brewery also performs slightly better than the university. Based on these findings, the best strategy to maximize sales is to run the truck at the brewery on weekends with partnership marketing.\n",
+        "\n",
+        "The main limitation of the experiment is that the fractional factorial design does not allow us to fully separate main effects from interactions, and the small number of replications means our estimates may be less stable. In the future, the study could be improved by collecting more data, including more replications, running a full factorial design, or adding other factors like weather or specific event days to get a clearer picture of what drives sales."
+      ],
+      "metadata": {
+        "id": "kNmffkqWFANF"
+      },
+      "id": "kNmffkqWFANF"
+    },
+    {
+      "cell_type": "markdown",
       "id": "9b63d7f8",
       "metadata": {
         "id": "9b63d7f8"
       },
       "source": [
-        "13. Give an overall conclusion for the experiment. Which location, timing, and marketing combination(s) should you use to maximize sales? What are the limitations of your experiment? How could you improve it in the future?\n",
+        "\n",
         "\n",
         "## Part 3 Instructions:\n",
         "\n",
@@ -1998,10 +2020,27 @@
         "\n",
         "1. How do we de-alias the main effects and interactions in a fractional factorial design? Why is this important? Why may it not always be feasible?\n",
         "\n",
+        "The experiments usually a foldover design (reversing factor signs) or by using a larger fraction of the design. These extra runs break the original confounding so we can separate main effects from interactions, Because if effects are aliased, we cannot tell which factor is truly causing the change, making the results unclear or misleading. De-aliasing often requires more runs, more time, and more cost, and in some settings additional experiments are not possible or practical.\n",
+        "\n",
         "2. In all of our assignments, I have had you specify/consider a lot of characteristics of an experiment before getting into the analysis. Why is this good practice?\n",
         "\n",
-        "3.  What is the most important thing you learned in this class?"
+        "\n",
+        "The characteristics of an experiment before analyzing it is good practice because it creates a clear, unbiased plan that prevents confounding and misinterpretation. By defining the factors, levels, design structure, randomization, and assumptions in advance, we ensure the experiment truly answers the research question and that the analysis remains valid, meaningful, and easy to interpret. Careful planning upfront leads to clearer results and reduces mistakes later.\n",
+        "\n",
+        "3.  What is the most important thing you learned in this class?\n",
+        "\n",
+        "The most important thing I learned in this class is just how foundational good experimental design really is. I came in thinking the analysis was the hard part, but I've realized that carefully choosing factors and treatments, planning randomization and replication, and thinking through assumptions before collecting any data is what truly makes results trustworthy. This course made me appreciate how much clarity and confidence come from planning things the right way from the start. It also taught me that even the most advanced statistical tools can't fix a study that wasn't designed well. Overall, I'm walking away with a much deeper respect for the process and a better understanding of how thoughtful design leads to better, more meaningful conclusions."
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Sr-DIQebFb7A"
+      },
+      "id": "Sr-DIQebFb7A",
+      "execution_count": 23,
+      "outputs": []
     }
   ],
   "metadata": {
