--- a/Assignments/Final-Exam/Final-Exam.ipynb
+++ b/Assignments/Final-Exam/Final-Exam.ipynb
@@ -552,19 +552,16 @@
         "\n",
         "#  ANOVA model\n",
         "full_model = ols('Satisfaction ~ C(Protein) * C(Salsa) * C(Potatoes)', data=df).fit()\n",
-        "# Using type 2 or type 3 anova for factorial designs with interactions\n",
         "print(sm.stats.anova_lm(full_model, typ=2))\n",
         "\n",
         "# --- Normality Assumption Check ---\n",
         "# Q-Q plot of residuals\n",
         "residuals = full_model.resid\n",
-        "\n",
         "plt.figure(figsize=(8, 6))\n",
-        "# Q-Q plot of the residuals\n",
+        "\n",
         "sm.qqplot(residuals, line='s')\n",
         "plt.title('Q-Q Plot of Residuals')\n",
         "plt.show()\n",
-        "\n",
         "sns.histplot(full_model.resid, kde=True)\n",
         "plt.title(\"Histogram of Residuals\")\n",
         "plt.show()\n",
@@ -915,18 +912,11 @@
       "source": [
         "## Question 11 Code ##\n",
         "# ANOVA table from your full model\n",
-        "\n",
         "anova_table = sm.stats.anova_lm(full_model, typ=2)\n",
-        "\n",
-        "\n",
-        "## Extract SS for error (residuals) ##\n",
         "ss_error = anova_table.loc[\"Residual\", \"sum_sq\"]\n",
-        "\n",
-        "\n",
         "# Compute partial eta-squared for each main effect\n",
         "partial_eta_sq = anova_table.iloc[:-1][\"sum_sq\"] / (anova_table.iloc[:-1][\"sum_sq\"] + ss_error)\n",
         "\n",
-        "# Print results\n",
         "partial_eta_sq\n"
       ]
     },
@@ -1271,9 +1261,7 @@
         "factor_cols = [\"Location\", \"Timing\", \"Marketing\"]\n",
         "for col in factor_cols:\n",
         "    burritos[col] = burritos[col].astype(\"category\")\n",
-        "\n",
-        "\n",
-        "# 2. Summary statistics: main effects\n",
+        "#main effects\n",
         "\n",
         "print(\"\\n=== Summary Statistics for Main Effects ===\")\n",
         "\n",
@@ -1304,7 +1292,7 @@
         "print(\"\\nMarketing:\")\n",
         "print(mkt_summary)\n",
         "\n",
-        "# 3. Summary statistics: two-way interactions\n",
+        "#two-way interactions\n",
         "\n",
         "print(\"\\n=== Summary Statistics for Two-Way Interactions ===\")\n",
         "\n",
@@ -1349,12 +1337,11 @@
         ")\n",
         "print(burrito_means)\n",
         "\n",
-        "# 6. Three-Way Interaction Plot with seaborn\n",
-        "\n",
+        "# Three-Way Interaction\n",
         "def three_way_interaction_box_line():\n",
         "    df = burritos\n",
         "\n",
-        "    # 1) Boxplots in separate panels\n",
+        "    #boxplot\n",
         "    g = sns.catplot(\n",
         "        data=df,\n",
         "        x=\"Timing\",\n",
@@ -1370,7 +1357,7 @@
         "    g.fig.subplots_adjust(top=0.82)\n",
         "    g.fig.suptitle(\"Three-Way Interaction: Location × Timing × Marketing\", fontsize=16)\n",
         "\n",
-        "    # 2) Compute means for each Timing × Location × Marketing\n",
+        "    #Three-Way Interaction\n",
         "    means = (\n",
         "        df.groupby([\"Marketing\", \"Timing\", \"Location\"])[\"Sales\"]\n",
         "          .mean()\n",
@@ -1395,11 +1382,9 @@
         "        ax.set_title(f\"Marketing: {mkt}\")\n",
         "        ax.set_xlabel(\"Timing\")\n",
         "        ax.set_ylabel(\"Sales (dollars)\")\n",
-        "\n",
-        "    # 4) Fix legend: keep only one, outside\n",
         "    handles, labels = g.axes.flat[0].get_legend_handles_labels()\n",
-        "    by_label = dict(zip(labels, handles))  # remove duplicates\n",
-        "\n",
+        "    # remove duplicates\n",
+        "    by_label = dict(zip(labels, handles))\n",
         "    g.fig.legend(\n",
         "        by_label.values(),\n",
         "        by_label.keys(),\n",
@@ -1407,14 +1392,12 @@
         "        loc=\"upper right\",\n",
         "        bbox_to_anchor=(0.98, 0.92)\n",
         "    )\n",
-        "\n",
-        "    # Remove per-axes legends\n",
         "    for ax in g.axes.flat:\n",
         "        if ax.get_legend() is not None:\n",
         "            ax.get_legend().remove()\n",
         "\n",
         "    plt.show()\n",
-        "#plot the graph\n",
+        "\n",
         "three_way_interaction_box_line()\n",
         "\n"
       ]
@@ -1853,13 +1836,11 @@
       ],
       "source": [
         "## Question 12 Code ##\n",
-        "\n",
-        "# Compute partial eta-squared for each effect\n",
         "ss_resid = anova_table.loc[\"Residual\", \"sum_sq\"]\n",
         "anova_pe = anova_table.copy()\n",
         "anova_pe[\"partial_eta2\"] = anova_pe[\"sum_sq\"] / (anova_pe[\"sum_sq\"] + ss_resid)\n",
         "\n",
-        "# Residual row partial eta² is not meaningful; set to NaN\n",
+        "# eta² is not meaningful set to NaN\n",
         "anova_pe.loc[\"Residual\", \"partial_eta2\"] = np.nan\n",
         "\n",
         "print(\"\\nANOVA Table with Partial Eta-Squared:\")\n",
